	caused warnings.

	* package_info_cell_renderer.c 
	(package_info_cell_renderer_set_property) : Use g_strstrip() on the
	'description' string. Use g_object_ref instead of duplicating the pixbuf.
	(package_info_cell_renderer_get_size) : Entries without a 'description'
	field won't be expanded.
	(package_info_cell_renderer_render) : Entries without a 'description'
	field won't be expanded.

2008-04-23  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.h,
	src/package-info-cell-renderer.c: New.
	* src/Makefile.am: Compile them.

	* src/util.cc [CAIRO_CELL_RENDERER]: Use the new
	PackageInfoCellRenderer instead of the nested cell renderers from
	Modest.  This gives much better performance (N84324).

2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.9

	* src/update-notifier.c (update_notifier_finalize): Do not call
	gtk_signal_handler_disconnect on priv->button.  See the comment.

	* src/settings.cc (red_pill_check_always): Set to false as
	default.

	* src/confutils.cc, src/confutils.h (notifier_equal): Removed.
	* src/hildon-application-manager-config.cc (handle_generic_element):
	Make element_description a parameter.
	(handle_alist_element): New.
	(handle_element): Use it for the notifier elements.
	(main): Append the whole notifier configuration as one element.
	(prepend): Removed, configuration lists are unsorted.

	* src/update-notifier.c (struct _UpdateNotifierPrivate): Added
	inotify_io_watch_id and child_watch_id.
	(setup_inotify): Remember source id for the inotify channel watch.
	(check_for_updates): Remember source id for the child watch.
	(check_for_updates_done): Reset it.
	(update_notifier_finalize, clenaup_inotify): Remove the two
	sources (N84597).

	Make the "Checking for updates" operation cleanly cancellable.

	* src/main.cc (rpcwu_cancel): New.
	(rpcwu_with_network): Call set_entertainment_cancel with it.
	(rcpwu_clos, rpcwu_clos): Renamed former to latter, changed all
	users.