@@ -2382,8 +2382,9 @@ install_from_file_flow (const char *filename)
       else
 	{
 	  /* Try to convert filename to GnomeVFS uri */
-	  char *fileuri = 
-	    gnome_vfs_get_uri_from_local_path (filename);
+	  char *fileuri = NULL;
+	  if (g_path_is_absolute (filename))
+	    fileuri = gnome_vfs_get_uri_from_local_path (filename);
 
 	  /* If there's an error then user filename as is */
 	  if (fileuri == NULL)
